--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /bootstrap/compiled.php
 /vendor
 /app/config/local
+/app/config/deploy
 /app/config/packages/artdarek
 /public/uploads
 composer.phar
